added final slide

--- a/qual_presentation.tex
+++ b/qual_presentation.tex
@@ -907,6 +907,13 @@ less work than our original method.
   \end{itemize}
 \end{frame}
 
+\begin{frame}[noframenumbering, plain]
+  \vfill
+  \centering
+  Thank you for your time!
+  \vfill
+\end{frame}
+
 
 \frame[noframenumbering, plain]{\frametitle{References}
 \tiny{\bibliographystyle{plain}}
