--- a/qual_presentation.tex
+++ b/qual_presentation.tex
@@ -1,11 +1,11 @@
 % NEUTRONICS BEAMER TEMPLATE -- START EDITING IN LINE 90
-%\documentclass[xcolor=x11names, compress, handout]{beamer}
-\documentclass[xcolor=x11names, compress]{beamer}
+\documentclass[xcolor=x11names, compress, handout]{beamer}
+%\documentclass[xcolor=x11names, compress]{beamer}
 \usepackage{pgfpages}
 \usefonttheme[onlymath]{serif}
 \setbeamerfont{caption}{size=\scriptsize}
-\setbeameroption{show notes on second screen=right}
-%\setbeameroption{hide notes}
+%\setbeameroption{show notes on second screen=right}
+\setbeameroption{hide notes}
 \include{neutronics_template}
 \setbeamertemplate{bibliography item}{\insertbiblabel}
 % \setbeamertemplate{note page}{\pagecolor{yellow!5}\insertnote}
